<resources>
    <string name="app_name">PermisosUNAHTEC</string>
    <string name="ExportarTodo">Exportar Todo</string>
    <string name="ExportarUltimoMes">Exportar Ultimo Mes</string>
    <string name="ExportarPerzonalizado">Exportar Perzonalizado</string>
    <string name="BorrarPermisos">Archivar Permisos</string>
    <string name="ArchivarPermisos">Permisos Archivados</string>
    <string name="Quejas">Quejas?</string>
    <string name="CerrarSesión">cerrar Sesion</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>


    <string name="action_sync">Sincronizar</string>
    <string name="action_settings">Settings</string>

    <string name="account_type">com.herprogramacion.permisos_unah.account</string>
    <string name="provider_authority">com.herprogramacion.permisos_unah</string>
    <string name="provider_authority_empleados">com.herprogramacion.permisos_unah_empleados</string>
    <string name="provider_authority_permisos">com.herprogramacion.permisos_unah_permisos</string>

    <string name="empty_list">No hay datos</string>

    <string name="title_activity_detail">Nuevo gasto</string>
    <string name="monto_hint">Monto</string>
    <string name="descripcion_hint">Descripción</string>
    <string name="etiqueta_title">Etiqueta</string>
    <string name="fecha_title">Fecha</string>
    <string-array name="etiquetas">
        <item>Comida</item>
        <item>Transporte</item>
        <item>Diversión</item>
    </string-array>
    <string name="boton">AGREGAR GASTO</string>
</resources>
