<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/buscar"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="Search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/cerrarSesion"
        android:title="Cerrar Sesión"
        android:icon="@drawable/cerrar_sesion_icon"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/ExportarTodo"
        android:title="@string/ExportarTodo"
        />
    <item
        android:id="@+id/ExportarUltimoMes"
        android:title="@string/ExportarUltimoMes"
        />
    <item
        android:id="@+id/ExportarPersonalizado"
        android:title="@string/ExportarPerzonalizado"
        />
    <item
        android:id="@+id/BorrarPermisos"
        android:title="@string/BorrarPermisos"
        />
    <item
        android:id="@+id/ArchivarPermisos"
        android:title="@string/ArchivarPermisos"
        />

</menu>